# carnival-backend

./: .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: game.rs  game_data.rs  lib.rs  prelude.rs  user.rs
entity/src/entities/: game.rs  game_api_info.rs  game_data.rs  mod.rs  prelude.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220605_161121_create_user_table.rs  m20220605_165732_create_game_table.rs  m20220605_171425_add_user_game_relation.rs  m20220606_175218_create_game_data.rs  m20220609_004546_create_game_api_table.rs
src/: auth.rs  logger.rs  main.rs
src/graphql/: mod.rs
src/graphql/mutation/: game.rs  game_api_info.rs  game_data.rs  mod.rs  user.rs
src/graphql/query/: game.rs  game_api_info.rs  game_data.rs  mod.rs  user.rs
src/graphql/types/: game.rs  game_api_info.rs  game_data.rs  game_description.txt  mod.rs  user.rs
static/: index.html
