[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members=[".", "migration", "entity"]

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
log = "0.4.17"
fern = "0.6.1"
chrono = "0.4.19"
rand = "0.8.5"
base64 = "0.13.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
actix-web = "4.0.1"
async-graphql = "4.0.1"
async-graphql-actix-web = "4.0.1"
sea-orm = { version = "^0.8.0", features = ["sqlx-postgres", "runtime-actix-rustls", "macros"] }

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
lto = "fat"
